# ROS_impl_F1tenth

./: README.md
src/f110_central_ctrler/: CMakeLists.txt  README.md  package.xml
src/f110_central_ctrler/config/: param_config.yaml  rosconsole_config.conf
src/f110_central_ctrler/include/: utility.h
src/f110_central_ctrler/launch/: periodic_ctrler.launch  rviz.launch
src/f110_central_ctrler/src/: periodic_ctrl.cpp
src/f110_gym_simulator/: docker.sh  ego_racecar.xacro  map_changing.sh  opp_racecar.xacro  params.yaml
src/f110_gym_simulator/f1tenth_gym/gym/f110_gym/envs/: f110_env.py
src/f110_gym_simulator/f1tenth_gym/include/: racecar.hpp
src/f110_gym_simulator/f1tenth_gym/maps/: track-self_def-full.pgm
src/f110_gym_simulator/f1tenth_gym/src/: racecar.cpp  simulator.cpp
src/f110_gym_simulator/launch/: gym_bridge.launch
src/f110_gym_simulator/maps/: hty0330.pgm.pgm  hty0330.pgm.yaml  track-self_def-full.yaml
src/f110_gym_simulator/scripts/: gym_bridge.py
src/f110_nmpc/: .gitignore  CMakeLists.txt  README.md  package.xml  para.sh
src/f110_nmpc/acado_code_generation/: CMakeLists.txt
src/f110_nmpc/acado_code_generation/src/: formulation.cpp
src/f110_nmpc/config/: param_config.yaml  rosconsole_config.conf
src/f110_nmpc/include/: nmpc_ctrl.hpp
src/f110_nmpc/include/test_WCET/: utils.hpp
src/f110_nmpc/launch/: nmpc_ctrler_ego.launch  nmpc_ctrler_opp.launch  test_WCET.launch
src/f110_nmpc/src/: LOROFO.cpp  nmpc_ctrl_callback.cpp  nmpc_ctrl_main.cpp  nmpc_ctrl_solver.cpp  nmpc_ctrl_utility.cpp  set_priority.cpp
src/f110_nmpc/src/acado_LO_generated/: acado_LO_auxiliary_functions.c  acado_LO_auxiliary_functions.h  acado_LO_common.h  acado_LO_hessian_regularization.c  acado_LO_integrator.c  acado_LO_qpoases_interface.cpp  acado_LO_qpoases_interface.hpp  acado_LO_solver.c
src/f110_nmpc/src/acado_RO_generated/: acado_RO_auxiliary_functions.c  acado_RO_auxiliary_functions.h  acado_RO_common.h  acado_RO_hessian_regularization.c  acado_RO_integrator.c  acado_RO_qpoases_interface.cpp  acado_RO_qpoases_interface.hpp  acado_RO_solver.c
src/f110_nmpc/src/acado_generated_code_for_f110_nmpc/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
src/f110_nmpc/src/test_WCET/: test_WCET.cpp  utils.cpp
src/f110_perception/: CMakeLists.txt  package.xml  reset_pos.sh
src/f110_perception/include/f110_opp_detect/: f110_opp_detect_node.hpp
src/f110_perception/include/f110_pf_cpp/: f110_pf_cpp_node.hpp
src/f110_perception/include/test_WCET/: LUT_occ_areas.hpp  utils.hpp
src/f110_perception/launch/: opp_detect.launch  pf_cpp.launch  test_WCET.launch  timer_manager.launch
src/f110_perception/src/: set_priority.cpp
src/f110_perception/src/f110_opp_detect/: f110_opp_detect_node.cpp  general_utils.cpp  handle_lidar.cpp  load_map.cpp
src/f110_perception/src/f110_pf_cpp/: f110_pf_cpp_node.cpp  particle_filter.cpp
src/f110_perception/src/f110_timer_manager/: f110_timer_manager_node.cpp
src/f110_perception/src/test_WCET/: test_WCET.cpp  utils.cpp
src/range_libc/: CMakeLists.txt  README.md  package.xml
src/range_libc/include/range_libc/: RangeLib.h  RangeUtils.h
