<?xml version="1.0"?>
<package format="2">

  <name>f110_nmpc</name>
  <version>0.0.0</version>

  <description>The NMPC controller (LOROFO) for F1tenth race car</description>
  <maintainer email="nan.li@telecom-paris.fr">Nan Li</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
