<?xml version="1.0"?>
<package format="2">
  <name>range_libc</name>
  <version>1.0.0</version>
  <description>ROS package for range_libc</description>
  <maintainer email="nan@todo.todo">nan</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
